--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -423,4 +423,19 @@ body footer #secondary-footer {
   font-family: 'Inter';
   font-size: 12px;
 }
+
+@media only screen and (max-width: 600px) {
+  body section#hero .container .row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  body section#hero .container .row img:last-child {
+    display: none;
+  }
+}
 /*# sourceMappingURL=main.css.map */
